Fix safari grid view images not showing (#2263)

--- a/themes/finna2/less/finna/grid-view.less
+++ b/themes/finna2/less/finna/grid-view.less
@@ -126,13 +126,12 @@
       max-height: 350px;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: stretch;
       justify-content: center;
       overflow: hidden;
       height: 100%;
       img {
         width: auto;
-        max-height: 100%;
         max-width: 100%;
         flex-shrink: 0;
       }
